--- a/style.css
+++ b/style.css
@@ -9,5 +9,132 @@
 
 body {
   min-height: 100vh;
+  width: 100%;
+  background-color: #e5eff5;
+}
+
+body #content {
+  width: 80%;
+  min-height: 100vh;
+  margin: 20% auto;
+}
+
+body #content .offer {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: 35vh 35vh 35vh;
+      grid-template-rows: 35vh 35vh 35vh;
+}
+
+body #content .offer section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding: 20px 30px;
+}
+
+body #content .offer .invite {
+  background-color: #fff;
+  border-radius: 10px 10px 0 0;
+}
+
+body #content .offer .invite h1 {
+  color: #2ab2af;
+}
+
+body #content .offer .invite p {
+  color: #98a6bd;
+  font-size: 12px;
+  line-height: 22px;
+}
+
+body #content .offer .invite .guarantee {
+  color: #c0df34;
+  font-size: 14px;
+}
+
+body #content .offer .sub {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  background-color: #2ab2af;
+}
+
+body #content .offer .sub h1 {
+  color: #fff;
+  -ms-flex-preferred-size: 20%;
+      flex-basis: 20%;
+}
+
+body #content .offer .sub .price {
+  margin-bottom: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #e5eff5;
+  font-size: 16px;
+}
+
+body #content .offer .sub .price span {
+  font-size: 36px;
+  color: #fff;
+}
+
+body #content .offer .sub .perDay {
+  color: #e5eff5;
+  font-size: 15px;
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
+}
+
+body #content .offer .sub button {
+  -ms-flex-preferred-size: 20%;
+      flex-basis: 20%;
+  border: none;
+  border-radius: 10px;
+  font-size: 15px;
+  color: #fff;
+  background-color: #c0df34;
+  -webkit-box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.2);
+}
+
+body #content .promo {
+  background-color: #2cc3c1;
+  border-radius: 0 0 10px 10px;
+}
+
+body #content .promo h1 {
+  color: #fff;
+}
+
+body #content .promo p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-right: 30%;
+  font-size: 12px;
+  line-height: 22px;
+  text-align: left;
+  color: #e5eff5;
+}
+
+footer {
+  display: none;
 }
 /*# sourceMappingURL=style.css.map */
