--- a/style.scss
+++ b/style.scss
@@ -9,4 +9,96 @@
 
 body{
     min-height: 100vh;
+    width: 100%;
+    background-color: hsl(204, 43%, 93%);
+    #content{
+        width: 80%;
+        min-height: 100vh;
+        margin: 20% auto;
+        .offer{
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 35vh 35vh 35vh;
+            section{
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+                padding: 20px 30px;
+            }
+                .invite{
+                    background-color: #fff;
+                    border-radius: 10px 10px 0 0;
+                    
+                    h1{
+                        color: hsl(179, 62%, 43%);
+                    }
+                    p{
+                        color:hsl(218, 22%, 67%);
+                        font-size: 12px;
+                        line-height: 22px;
+                    }
+                    .guarantee{
+                        color: hsl(71, 73%, 54%);
+                        font-size: 14px;
+                    }
+                
+                }
+                .sub{
+                    justify-content: flex-start;
+                    background-color:  hsl(179, 62%, 43%);
+                    h1{
+                        color:#fff;
+                        flex-basis: 20%;
+                    }
+                   
+                    .price{
+                          margin-bottom: 10px;
+                          display: flex;
+                          align-items: center;
+                          color:  hsl(204, 43%, 93%);
+                          font-size: 16px;
+                        span{
+                           font-size: 36px;
+                           color: #fff;
+                          }
+                        }
+                    .perDay{
+                            color:  hsl(204, 43%, 93%);
+                            font-size: 15px;
+                            flex-basis: 30%;
+                    }
+                    button{
+                        flex-basis:20%;
+                        border: none;
+                        border-radius: 10px;
+                        font-size: 15px;
+                        color: #fff;
+                        background-color: hsl(71, 73%, 54%);
+                        box-shadow: 0px 6px 6px rgba(0,0,0,0.2);
+                    }
+                    }
+                }
+                .promo{
+                    background-color: hsl(179, 63%, 47%);
+                    border-radius: 0 0 10px 10px;
+                    h1{
+                        color: #fff;
+                    }
+                    p{
+                        display: flex;
+                        flex-direction: column;
+                        margin-right: 30%;
+                        font-size: 12px;
+                        line-height: 22px;
+                        text-align: left;
+                        color:  hsl(204, 43%, 93%);
+                    }
+                }
+            
+        }
+    }
+
+
+footer{
+    display: none;
 }
